// Copyright 2018 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package pkg.apis.bundle.v1alpha1;

option go_package = "github.com/GoogleCloudPlatform/k8s-cluster-bundle/pkg/apis/bundle/v1alpha1";

import "google/protobuf/struct.proto";
import "pkg/apis/bundle/v1alpha1/bundle_common.proto";
import "pkg/apis/bundle/v1alpha1/object_meta.proto";

// Kubernetes objects grouped into cluster components and versioned together.
// These could be applications or they could be some sort of supporting
// collection of objects.
message ComponentPackage {
  // Required. Kubernetes API Version for the ComponentPackage type.
  // Must always be 'bundle.gke.io/v1alpha1'
  string apiVersion = 1;

  // Required. The Kubernetes `kind` for this object. Must be
  // 'ComponentPackage'.
  string kind = 2;

  // Kubernetes Metadata for the component. The Metadata.name field must be
  // filled out and each component in a bundle must have a unique name. For
  // example you might have a 'kube-apiserver' component or perhaps even a
  // 'kubernetes' component, depending on the granularity of the Bundle
  // components.
  ObjectMeta metadata = 3;

  // Spec for the ComponentPackage.
  ComponentPackageSpec spec = 4;
}

// ComponentPackageSpec represents the spec for the component.
message ComponentPackageSpec {
  // Version-string for this component. The version should be a SemVer 2 string
  // (see https://semver.org/) of the form X.Y.Z (Major.Minor.Patch).  A
  // major-version changes should indicate breaking changes, minor-versions
  // should indicate backwards compatible features, and patch changes should
  // indicate backwards compatible. If there are any changes to the component,
  // then the version string must be incremented.
  string version = 1;

  // Optional. A version-string representing the version of the API this
  // component offers to other components (for the purposes of requirement
  // satisfaction). If no API is offered to other components, then this field
  // may be blank, but then other components may not depend on this component.
  string componentApiVersion = 2;

  // A list of components that must be packaged in a bundle in with this
  // component.
  repeated MinRequirement requirements = 3;

  // Structured Kubenetes objects that run as part of this app, whether on the
  // master, on the nodes, or in some other fashion.  These Kubernetes objects
  // are inlined and must be YAML/JSON compatible. Each must have `apiVersion`,
  // `kind`, and `metadata`.
  //
  // This is essentially equivalent to the Kubernetes `Unstructured` type.
  repeated google.protobuf.Struct cluster_objects = 4;

  // Cluster objects that are specified via a File-URL. The process of inlining
  // a component turns cluster object files into cluster objects.
  // During the inline process, if the file is YAML-formatted and contains multiple
  // objects, the objects will be split into separate inline objects. In other
  // words, one cluster object file may result in multiple cluster objects.
  //
  // Each cluster object file must be parsable into a Struct: In other words,
  // it should be representable as either YAML or JSON.
  repeated File cluster_object_files = 5;

  // Raw files represent arbitrary string data. Unlike cluster object files,
  // these files don't need to be parsable as YAML or JSON. So, during the
  // inline process, the data is inserted into a generated config map before
  // being added to the cluster objects. A ConfigMap is generated per-file,
  // with the metadata.name and the data-key both being set to the base-file
  // name. Thus, if the url is something like 'file://foo/bar/biff.txt', the
  // metadata.name and data-key will be 'biff.txt'.
  repeated File raw_text_files = 6;
}

// MinRequirement represents a component that this component must be packaged
// with in a ClusterBundle (or must be satisfied in some other fashion). This is
// roughly based on Semantic Import Versioning in the Go Language:
// https://research.swtch.com/vgo-import.
message MinRequirement {
  // Name of a component. The component name specified here must match exactly a
  // component name in the `metadata.name` field of another component.
  string component = 1;

  // The sem-ver apiVersion of the component. The API Version is only a minimum
  // requirement. The assumption any newer component with only backwards
  // compatible changes is acceptable.
  string componentApiVersion = 2;
}
